fix: only support dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,15 +3,8 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #2b2929;
-    --foreground: #ededed;
-  }
+  --background: #2b2929;
+  --foreground: #ededed;
 }
 
 body {
